--- a/index.html
+++ b/index.html
@@ -71,6 +71,50 @@
 
             <section class="container">
                 <h3 class="menu-item">Projects</h3>
+
+              <div class="swiper-projects">
+                       <!-- Additional required wrapper -->
+                 <div class="swiper-wrapper"> 
+                    <!-- Slides  -->
+                     <div class="swiper-slide">
+                        <h4>Website redesign for Logement Dwarsgracht, because the old one was not responsive.</h4>
+                        <div class="project-info">
+                            <figure>
+                                <img src="assets/images/LD.png" alt="Logement Dwarsgracht">
+                            </figure>
+                            <div>
+                                <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
+                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive proof.</p>
+                                <p>Currently, this website is not live yet but is deployed with netlify. Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <a href="https://logement-dwarsgracht.netlify.app/" target="_blank">Take a look</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <h4>Website redesign for Logement Dwarsgracht, because the old one was not responsive.</h4>
+                        <div class="project-info">
+                            <figure>
+                                <img src="assets/images/LD.png" alt="Logement Dwarsgracht">
+                            </figure>
+                            <div>
+                                <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
+                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive proof.</p>
+                                <p>Currently, this website is not live yet but is deployed with netlify. Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <a href="https://logement-dwarsgracht.netlify.app/" target="_blank">Take a look</a>
+                            </div>
+                        </div>
+                    </div> 
+
+                    </div> 
+                
+                    <!-- If we need navigation buttons -->
+                    <div class="project-nav">
+                    <div class="swiper-button-prev"><p>Previous</p></div>
+                    <div class="swiper-button-next"><p>Next</p></div>
+                </div>
+                </div>           
+
             </section>
 
             <div class="container">
