Update LD project

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             </figure>
                             <div>
                                 <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
-                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive proof.</p>
-                                <p>Currently, this website is not live yet but is deployed with netlify. Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
+                                <p>Currently, this website is not live yet but is deployed with <a href="https://www.netlify.com/" target="_blank">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
                                 <a href="https://logement-dwarsgracht.netlify.app/" target="_blank">Take a look</a>
                             </div>
                         </div>
@@ -99,8 +99,8 @@
                             </figure>
                             <div>
                                 <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
-                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive proof.</p>
-                                <p>Currently, this website is not live yet but is deployed with netlify. Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
+                                <p>Currently, this website is not life yet but is deployed with <a href="https://www.netlify.com/">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
                                 <a href="https://logement-dwarsgracht.netlify.app/" target="_blank">Take a look</a>
                             </div>
                         </div>
