--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
                        <!-- Additional required wrapper -->
                  <div class="swiper-wrapper"> 
                     <!-- Slides  -->
+                    <div class="swiper-slide">
+                        <h4>Website design Justice & Peace, from Wordpress to Craft.CMS</h4>
+                        <div class="project-info">
+                            <figure>
+                                <img src="assets/images/J&P.png" alt="Justice & Peace">
+                            </figure>
+                            <div>
+                                <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
+                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
+                                <p>Currently, this website is not life yet but is deployed with <a href="https://www.netlify.com/">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <a href="https://marlies1989.github.io/Justice-Peace/" target="_blank">Take a look</a>
+                            </div>
+                        </div>
+                    </div> 
+
                      <div class="swiper-slide">
                         <h4>Website redesign for Logement Dwarsgracht, because the old one was not responsive.</h4>
                         <div class="project-info">
@@ -92,16 +107,16 @@
                     </div>
 
                     <div class="swiper-slide">
-                        <h4>Website redesign for Logement Dwarsgracht, because the old one was not responsive.</h4>
+                        <h4>Website design for The Hague Humanity Hub based on their new branding.</h4>
                         <div class="project-info">
                             <figure>
-                                <img src="assets/images/LD.png" alt="Logement Dwarsgracht">
+                                <img src="assets/images/THHH.png" alt="The Hague Humanity Hub">
                             </figure>
                             <div>
                                 <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
                                 <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
                                 <p>Currently, this website is not life yet but is deployed with <a href="https://www.netlify.com/">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
-                                <a href="https://logement-dwarsgracht.netlify.app/" target="_blank">Take a look</a>
+                                <a href="https://marlies1989.github.io/The-Hague-Humanity-Hub/" target="_blank">Take a look</a>
                             </div>
                         </div>
                     </div> 
