--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             
             <h1>Marlies Petter</h1>
-            <h2>Front-end developer with a communication background</h2>
+            <h2>Front-end developer with a twist.</h2>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -92,15 +92,16 @@
                     </div> 
 
                      <div class="swiper-slide">
-                        <h4>Website redesign for Logement Dwarsgracht, because the old one was not responsive.</h4>
+                        <h4>A new contemporary look - Logement Dwarsgracht.</h4>
                         <div class="project-info">
                             <figure>
                                 <img src="assets/images/LD.png" alt="Logement Dwarsgracht">
                             </figure>
                             <div>
-                                <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
-                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
-                                <p>Currently, this website is not live yet but is deployed with <a href="https://www.netlify.com/" target="_blank">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <p>Logement Dwarsgracht is a small guesthouse in the middle of the Weerribben Wieden. This website was launched in 2008 and since then, no update has been done. At that time, websites were not built responsively, in the current era this is indispensable. In addition to the desire for a responsive website, the design could also use an update to a more modern design.</p>
+                                <p>It is a simple website that does not need to do much, for this reason, I chose to develop it with Vue.js. I wanted to learn a new js framework and during my research, I ended up with Vue.js.</p>
+                                <p>There were no limitations to the design, so I opted for a minimalist design. The target group of Logement Dwarsgracht is often 50+, and a simple minimalist website suits this better. Through the use of colour and font, the website radiates peace and luxury.</p>
+                                <p>The website is not yet live but is deployed through <a href="https://www.netlify.com/" target="_blank">Netlify.</a> This was chosen so the client can experience the new website the same as their target group, test it and provide feedback.</p>
                                 <a href="https://logement-dwarsgracht.netlify.app/" target="_blank">Take a look</a>
                             </div>
                         </div>
@@ -138,7 +139,19 @@
 
             <section class="container">
                 <h3 class="menu-item">Contact</h3>
-                <a class="contact" href="mailto:marliespetter@hotmail.com">Send e-mail</a>
+                <div class="contact-info">
+                    <a href="mailto:marliespetter@hotmail.com">
+                        <img src="./assets/images/mail.svg" alt="Mail Marlies Petter">
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/marlies-petter/" target="_blank">
+                        <img src="./assets/images/linkedin.svg" alt="LinkedIn Marlies Petter">
+                    </a>
+
+                    <a href="https://github.com/Marlies1989" target="_blank">
+                        <img src="./assets/images/github.svg" alt="Github Marlies Petter">
+                    </a>
+                </div>
             </section>
             
         </main>
