--- a/index.html
+++ b/index.html
@@ -122,6 +122,21 @@
                         </div>
                     </div> 
 
+                    <div class="swiper-slide">
+                        <h4>Showcase your art - website design and Craft template</h4>
+                        <div class="project-info">
+                            <figure>
+                                <img src="assets/images/MP.png" alt="Personal website Marlies Petter">
+                            </figure>
+                            <div>
+                                <p>In my spare time, I love to make illustrations, often illustrations of holidays I have made as a memory. These illustrations are made with Adobe Illustrator. Friends, family and new people around me are curious about what these look like. For this reason, I developed this website.</p>
+                                <p>This website is built with HTML/CSS/Javascript. It is a simple design so the attention is focused on the illustrations. The illustrations can also be displayed by category and each category will be added to the navigation menu.</p>
+                                <p>The current website online is based on HTML / CSS / Javascript, but I have also developed this template in Craft.cms. At Two Kings, a new website is developed with Craft.cms. To gain more knowledge and learn this cms system, I have converted this design into a Craft.cms template.</p>
+                                <a href="https://marliespetter.nl/" target="_blank">Take a look</a>
+                            </div>
+                        </div>
+                    </div> 
+
                     </div> 
                 
                     <!-- If we need navigation buttons -->
