--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                                 <img src="assets/images/J&P.png" alt="Justice & Peace">
                             </figure>
                             <div>
-                                <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
-                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
-                                <p>Currently, this website is not life yet but is deployed with <a href="https://www.netlify.com/">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <p>Justice & Peace Netherlands is a non-profit organisation dedicated to defending and promoting respect for human rights and social justice for everyone. Their current website is based on WordPress. For their new website, they switched to Two Kings so they are not depending on one person only and they also updated their branding.</p>
+                                <p>Based on their new brand identity, meetings we had with their team, the old website and our ideas, I made a Figma prototype. The prototype's modular design allows for flexible page creation, empowering the client to construct diverse page layouts. After the prototype was finished I could start developing the static templates based on HTML / CSS / Javascript.</p>
+                                <p>There were some challenges, a big menu, and a title gradient with a white background, but with the help of colleagues and the internet, I managed to create the templates based on the design. </p>
                                 <a href="https://marlies1989.github.io/Justice-Peace/" target="_blank">Take a look</a>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                                 <img src="assets/images/LD.png" alt="Logement Dwarsgracht">
                             </figure>
                             <div>
-                                <p>Logement Dwarsgracht is a small guesthouse in the middle of the Weerribben Wieden. This website was launched in 2008 and since then, no update has been done. At that time, websites were not built responsively, in the current era this is indispensable. In addition to the desire for a responsive website, the design could also use an update to a more modern design.</p>
+                                <p>Logement Dwarsgracht is a small guesthouse in the middle of the Weerribben Wieden. The current website was launched in 2008 and since then, no update has been done. At that time, websites were not built responsively, in the current era this is indispensable. In addition to the desire for a responsive website, the design could also use an update to a more modern design.</p>
                                 <p>It is a simple website that does not need to do much, for this reason, I chose to develop it with Vue.js. I wanted to learn a new js framework and during my research, I ended up with Vue.js.</p>
                                 <p>There were no limitations to the design, so I opted for a minimalist design. The target group of Logement Dwarsgracht is often 50+, and a simple minimalist website suits this better. Through the use of colour and font, the website radiates peace and luxury.</p>
                                 <p>The website is not yet live but is deployed through <a href="https://www.netlify.com/" target="_blank">Netlify.</a> This was chosen so the client can experience the new website the same as their target group, test it and provide feedback.</p>
@@ -114,9 +114,9 @@
                                 <img src="assets/images/THHH.png" alt="The Hague Humanity Hub">
                             </figure>
                             <div>
-                                <p>Logement Dwarsgracht started in 2008, this was also the time the current website was built. At that time responsive webdesign was not there yet. These days your website can not without responsiveness.</p>
-                                <p>The new website is build with Vue.js, because I wanted to learn to build a simple website with Vue.js. And offcourse it is responsive.</p>
-                                <p>Currently, this website is not life yet but is deployed with <a href="https://www.netlify.com/">Netlify.</a> Netlify is used so the customer can see and test a live preview of the new website and give their feedback.</p>
+                                <p>The Hague Humanity Hub supports and strengthens the ecosystem for a more peaceful and just world. Their current website was built with WordPress, and different plugins were added through different people. In the end, nobody knows which plugins were used for what. To end the many plugins they choose Two Kings to rebuild their new website with Bolt CMS. Besides that, they also updated their branding, so a redesign was also needed.</p>
+                                <p>Based on their new branding, meetings and our ideas we have developed a prototype with Figma. After the prototype was approved I started developing the static templates, based on HTML / CSS / Javascript and for animations, I used GSAP.</p>
+                                <p>Due to circumstances, the client decided to take another approach for their new website. Therefore unfortunately these static templates were not necessary anymore. But still, I am happy with the result.</p>
                                 <a href="https://marlies1989.github.io/The-Hague-Humanity-Hub/" target="_blank">Take a look</a>
                             </div>
                         </div>
@@ -133,6 +133,28 @@
                                 <p>This website is built with HTML/CSS/Javascript. It is a simple design so the attention is focused on the illustrations. The illustrations can also be displayed by category and each category will be added to the navigation menu.</p>
                                 <p>The current website online is based on HTML / CSS / Javascript, but I have also developed this template in Craft.cms. At Two Kings, a new website is developed with Craft.cms. To gain more knowledge and learn this cms system, I have converted this design into a Craft.cms template.</p>
                                 <a href="https://marliespetter.nl/" target="_blank">Take a look</a>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="swiper-slide">
+                        <h4>There is more</h4>
+                        <div class="project-info">
+                            <!-- <figure>
+                                <img src="assets/images/MP.png" alt="Personal website Marlies Petter">
+                            </figure> -->
+                            <div>
+                                <p>Besides these projects, there is more.</p> 
+
+                                <a href="https://holland-dance.com/" target="_blank">Holland Dance Festival</a>
+                                <p>I have helped the senior front-end developer at Two Kings with developing static templates based on HTML / CSS / Javascript.</p>
+
+                                <a href="https://www.thehaguesfinest.com/" target="_blank">The Hague’s Finest</a>
+                                <p>Adjust the CSS for their website based on their new branding.</p>
+
+                                <a href="https://petterbotenbouw.nl/" target="_blank">Petter Botenbouw</a>
+                                <p>Designed and developed this static website for Petter Botenbouw.</p>
+                                
                             </div>
                         </div>
                     </div> 
