--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 </div>
                 <div class="swiper-slide">
                     <figure>
+                        <img class="left" src="assets/images/Minty_Marlies.jpg" alt="Minty de camper en Marlies">
+                    </figure>
+                </div>
+                <div class="swiper-slide">
+                    <figure>
                         <img src="assets/images/Marlies_hiking.jpeg" alt="dolomites hiking">
                     </figure>
                 </div>
