--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="swiper-slide">
                     <figure>
-                        <img class="left" src="assets/images/Minty_Marlies.jpg" alt="Minty de camper en Marlies">
+                        <img class="left-center" src="assets/images/Minty_Marlies.jpg" alt="Minty de camper en Marlies">
                     </figure>
                 </div>
                 <div class="swiper-slide">
