--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 
                                 <a href="https://petterbotenbouw.nl/" target="_blank">Petter Botenbouw</a>
                                 <p>Designed and developed this static website for Petter Botenbouw.</p>
+                                <p>Currently working on a new version of Petter Botenbouw.</p>
                                 
                             </div>
                         </div>
