--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
             <h2>Front-end developer with a twist.</h2>
             <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <span>|</span>
-                    <li><a href="#projects">Projects</a></li>
-                    <span>|</span>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="ease-in-right"><a href="#about">About</a></li>
+                    <span class="ease-in-right">|</span>
+                    <li class="ease-in-right"><a href="#projects">Projects</a></li>
+                    <span class="ease-in-right">|</span>
+                    <li class="ease-in-right"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
 
         <main>
-            <div class="container">
+            <div class="container ease-in-right">
                 <span class="divider" id="about"></span>
             </div>
 
-            <section class="container">
+            <section class="container ease-in">
                 <h3 class="menu-item">About</h3>
                 <p>Hello, I'm Marlies, a front-end developer with a twist. A twist because l have a background in communication which adds value in front-end projects. I love to create new designs and turn them into captivating digital experiences.</p>
                 <p>Please feel free to delve into my latest projects and don't hesitate to reach out if you're interested in working with me.</p>
             </section>
 
-            <div class="container">
+            <div class="container ease-in-right">
                 <span class="divider" id="projects"></span>
             </div>
 
-            <section class="container">
+            <section class="container ease-in">
                 <h3 class="menu-item">Projects</h3>
 
               <div class="swiper-projects">
@@ -178,22 +178,22 @@
 
             </section>
 
-            <div class="container">
+            <div class="container ease-in-right">
                 <span class="divider" id="contact"></span>
             </div>
 
             <section class="container">
-                <h3 class="menu-item">Contact</h3>
+                <h3 class="menu-item ease-in-right">Contact</h3>
                 <div class="contact-info">
-                    <a href="mailto:marliespetter@hotmail.com">
+                    <a class="ease-in-right" href="mailto:marliespetter@hotmail.com">
                         <img src="./assets/images/mail.svg" alt="Mail Marlies Petter">
                     </a>
 
-                    <a href="https://www.linkedin.com/in/marlies-petter/" target="_blank">
+                    <a class="ease-in-right" href="https://www.linkedin.com/in/marlies-petter/" target="_blank">
                         <img src="./assets/images/linkedin.svg" alt="LinkedIn Marlies Petter">
                     </a>
 
-                    <a href="https://github.com/Marlies1989" target="_blank">
+                    <a class="ease-in-right" href="https://github.com/Marlies1989" target="_blank">
                         <img src="./assets/images/github.svg" alt="Github Marlies Petter">
                     </a>
                 </div>
@@ -203,6 +203,38 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/js/main.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+    <script>
+        gsap.from("h1", {
+            duration:2,
+            ease: "power1.inOut",
+            y: 250,
+            });
+    
+    gsap.registerPlugin(ScrollTrigger);
+
+    ScrollTrigger.batch(".ease-in", {
+        onEnter: batch => {
+            gsap.from(batch, { y: 75, stagger: .25})
+            },
+        });
+
+    ScrollTrigger.batch(".ease-in-right", {
+        onEnter: batch => {
+            gsap.from(batch, {
+            duration:2,
+            ease: "power1.inOut",
+            x: 500,
+            stagger: .5,
+            });
+        }
+    })    
+    
+
+    </script>
 
     </body>
   </html>
